# EE405_Robotic_Manipulator

./: README.md
Lab1/: Ethernet setting.pptx  Lab1_Report_20170699.docx
Lab2/: Lab2_Report_20170699.docx
Lab2/2_SwitchControl_SkeletonCode/b_LED_ShellScript/: loop_control_lights.sh  ui_control_lights.sh
Lab2/2_SwitchControl_SkeletonCode/c_LED_CppProgram/src/: gpio_control.cpp  loop_light_control.cpp  test_light_control.cpp
Lab2/2_SwitchControl_SkeletonCode/d_GripperControl/include/: gpio_control.hpp
Lab2/2_SwitchControl_SkeletonCode/d_GripperControl/src/: gripper_control.cpp  gripper_test.cpp
Lab2/b_LED_ShellScript/: loop_control_lights.sh
Lab2/c_LED_CppProgram/: CMakeLists.txt
Lab2/c_LED_CppProgram/src/: loop_light_control.cpp  test_light_control.cpp
Lab2/d_GripperControl/: CMakeLists.txt
Lab2/d_GripperControl/src/: gpio_control.cpp  gripper_control.cpp  gripper_test.cpp
Lab3/: Lab3_Report_20170699.docx
Lab3/EE405_MotorControl/: CMakeLists.txt
Lab3/EE405_MotorControl/include/Common/: LowPassFilter.cpp  LowPassFilter.hpp  NumDiff.cpp  NumDiff.hpp
Lab3/EE405_MotorControl/include/Controller/: ArticulatedSystem.cpp  ArticulatedSystem.hpp
Lab3/EE405_MotorControl/include/FileIO/: MatrixFileIO.cpp  MatrixFileIO.hpp
Lab3/EE405_MotorControl/matlab/: plot_data.m
Lab3/EE405_MotorControl/src/: motor_control.cpp
Lab4/: Lab4_Report_20170699.docx
Lab4/Network/Socket/: CMakeLists.txt
Lab4/Network/Socket/src/: capture.c  talker.c
Lab4/Skeleton_code_for_Lab4/: RemoteController_Bone_Skeleton.c  RemoteController_PC_Skeleton.c
Lab4/WiFi/Remote_Commander/: CMakeLists.txt
Lab4/WiFi/Remote_Commander/src/: RemoteController_Bone_Skeleton.cpp  RemoteController_PC_Skeleton.cpp
Lab5/: Lab5_Report_20170699.docx
Lab5/EE405_ManipulatorControl/: .command.txt  CMakeLists.txt
Lab5/EE405_ManipulatorControl/include/Common/: DirectTeaching.cpp  Kinematics.cpp
Lab5/EE405_ManipulatorControl/src/: manipulator_control_week1.cpp  manipulator_control_week2.cpp  save_waypoints.cpp
Lab6/EE405_SystemIntegaration/: CMakeLists.txt
Lab6/EE405_SystemIntegaration/include/Common/: DirectTeaching.cpp  DirectTeaching.hpp  Kinematics.cpp  gpio_control.cpp  gpio_control.h
Lab6/EE405_SystemIntegaration/include/Controller/: ArticulatedSystem.cpp
Lab6/EE405_SystemIntegaration/include/FiniteStateMachine/: fsm.cpp  fsm.h  fsm_own.cpp  fsm_own.h
Lab6/EE405_SystemIntegaration/src/: modified_direct_teaching.cpp  system_integration.cpp  system_integration_own.cpp  teleoperation_udp.cpp
